


Summary 1999-09-23 ->1999-10-17
-Now you can clear area
-You can ajust area
-Now when you insert or remove column (or row) all is recalcing.
-Fix bug When you insert and remove column and row (Now it works)
-When you change name of a table, now all cells which refere to this table
now text is change to refere to new name.
-Now when you insert column (row) or remove column (row) and there are cell
which refere others cells so if these cells are moving so I modifie
reference.
-Now Insert and remove column ( or row) works
	=>change specific reference according to name table
	and change in differents tables.
-Fix bug : Now when you delete a formula it works
-Now you can create border directly
-Now you can insert and remove cell (=>move cell at right or bottom etc..)
-Refresh dependence when you insert and remove cell
-Improved Special paste now you can paste only value.
-Now you can hide different tables and it's saving.

1999-10-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix gotoLocation now when you createanchor for going to other
cell, now it works.
-Now you can ajust one cell

 1999-10-30 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Refresh icon text color and icon background color

Summary 1999-10-17 ->1999-10-30

Torben weis has installed posibility to make script in kspread.
You can test it :
	- execute kspread &
	- kscript example15.ks
	
We can write in a specific table, create new table change name ...

thanks .

1999-11-02 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bugfix
-change name in kspread_dlg_formula to correspond with kspread_interpreter
(for example NO =>not etc ...)
Now it works

1999-11-11 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bugfix Now changeref works
-Now you can put and remove percent in a cell.